@@ -1,4 +1,4 @@
-FROM openjdk:11-jdk-slim as build
+FROM eclipse-temurin:25-jdk AS build
 WORKDIR /workspace/app
 
 COPY mvnw .
@@ -9,11 +9,11 @@ COPY src src
 RUN ./mvnw install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:25-jre
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
 
-ENTRYPOINT ["java", "--illegal-access=deny", "-Djava.security.egd=file:/dev/./urandom","-cp","app:app/lib/*","com.vinberts.shrinkly.ShrinklyApplication"]
+ENTRYPOINT ["java","-cp","app:app/lib/*","com.vinberts.shrinkly.ShrinklyApplication"]
